docs(skill): add compactor image to publish-docker skill (#361)
Add dazzleduck/ducklake-compactor to the publish-docker command:
- build both arches SEQUENTIALLY (its shade fat-jar corrupts target/ if the two
  same-module builds run in parallel; runtime/otel don't shade, so stay parallel)
- multi-arch manifests + verify extended to all three images
- note Jib Docker Hub auth (private base-jre; credsStore=desktop can be empty
  despite `docker login`) and building from the release tag, not a -SNAPSHOT branch

Co-authored-by: tanejgagan@yahoo.com <gtaneja@vijayshrees-mbp.lan>
Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>